WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297308
The bounds of each _WKTextRun should contain the text range (instead of the entire node)
https://bugs.webkit.org/show_bug.cgi?id=297308
Summary
The bounds of each _WKTextRun should contain the text range (instead of the e...
Wenson Hsieh
Reported
2025-08-12 19:56:21 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-12 19:56:40 PDT
<
rdar://problem/158187835
>
Wenson Hsieh
Comment 2
2025-08-12 20:04:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49307
EWS
Comment 3
2025-08-12 22:55:47 PDT
Committed
298609@main
(6d776ad376d9): <
https://commits.webkit.org/298609@main
> Reviewed commits have been landed. Closing PR #49307 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug