The bounds of each _WKTextRun should contain the text range (instead of the entire node) https://bugs.webkit.org/show_bug.cgi?id=297308 rdar://158187835

Reviewed by Abrar Rahman Protyasha.

Currently, each visible run of text extracted through this SPI reports its containing text node's
bounds as the `rectInWebView`. However, this is inconsistent with the text run itself, which is
limited to a single line. Fix this inconsistency by instead reporting the bounds of the text rects
corresponding to each range surfaced by `TextIterator`.

* Source/WebCore/page/text-extraction/TextExtraction.cpp:
(WebCore::TextExtraction::extractAllTextAndRectsRecursive):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewGetContents.mm:
(TestWebKitAPI::TEST(WKWebView, RequestAllTextRunsWithSubframes)):

Rebaseline an existing API test to exercise this fix.

Canonical link: https://commits.webkit.org/298609@main